# clex

./: .gitmodules  CMakeLists.txt  README.md  clex.cmake
app/: main.cpp
cmake/: GLog.cmake  HatTrie.cmake
include/: lex.h  reader.h  type.h
src/: lex.cpp  reader.cpp  type.cpp
tests/: CMakeLists.txt
